# LogViewer

./: .gitignore  CMakeLists.txt  README  README.md  log-viewer.desktop
src/: CMakeLists.txt  headerbar.cpp  headerbar.hh  log_utils.cpp  log_utils.hh  main.cpp  main_menu_button.cpp  main_menu_button.hh  text_view.cpp  text_view.hh  tree_view.cpp  tree_view.hh  window.cpp  window.hh
